Update service.proto, add enums
